--- a/gemma_270_finetune/gemma_train_generate_ch03_v4.ipynb
+++ b/gemma_270_finetune/gemma_train_generate_ch03_v4.ipynb
@@ -1,25 +1,74 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "e1b280ab-b61f-4d1a-bf7e-44e5f9ed3a5c",
-   "metadata": {
-    "id": "e1b280ab-b61f-4d1a-bf7e-44e5f9ed3a5c"
-   },
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "cb9344eb-22a2-48d2-a72a-827bbc9b6a98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook gemma_train_generate_ch03_v4.ipynb to script\n",
+      "[NbConvertApp] Writing 60069 bytes to gemma_train_generate_ch03_v4.py\n"
+     ]
+    }
+   ],
    "source": [
-    "<table style=\"width:100%\">\n",
-    "<tr>\n",
-    "<td style=\"vertical-align:middle; text-align:left;\">\n",
-    "<font size=\"2\">\n",
-    "Supplementary code for the <a href=\"http://mng.bz/orYv\">Build a Large Language Model From Scratch</a> book by <a href=\"https://sebastianraschka.com\">Sebastian Raschka</a><br>\n",
-    "<br>Code repository: <a href=\"https://github.com/rasbt/LLMs-from-scratch\">https://github.com/rasbt/LLMs-from-scratch</a>\n",
-    "</font>\n",
-    "</td>\n",
-    "<td style=\"vertical-align:middle; text-align:left;\">\n",
-    "<a href=\"http://mng.bz/orYv\"><img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/cover-small.webp\" width=\"100px\"></a>\n",
-    "</td>\n",
-    "</tr>\n",
-    "</table>"
+    "# turn this into a .py file\n",
+    "!jupyter nbconvert --to script gemma_train_generate_ch03_v4.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "512f3865-6a3e-4367-9112-75d6ea7a3244",
+   "metadata": {},
+   "source": [
+    "# Training Gemma"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca4b598a-465a-4c95-838f-233ca8b3d679",
+   "metadata": {},
+   "source": [
+    "## TODO\n",
+    "\n",
+    "### 1. \n",
+    "- gutenberg txt fine tuning\n",
+    "- epub-conversion fine-tuning\n",
+    "- alpaca/instruct fine tuning\n",
+    "- synthetic data fine tuning\n",
+    "  1. \"Who's coming to the party\"\n",
+    "- testing from-nothing training\n",
+    "- base model trimming, pruning\n",
+    "- classification head\n",
+    "- embedding head\n",
+    "- dynamic-embeddings\n",
+    "- IoT Data\n",
+    "- Biological Signals & Behavior\n",
+    "  1. birdsong\n",
+    "  2. ants\n",
+    "  3. population stability\n",
+    "\n",
+    "### 2. \n",
+    "- full model training vs. lora-layer addition\n",
+    "- saving an reloading weights\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ce4a437-fabf-404b-ad3b-6d0e206f28b2",
+   "metadata": {},
+   "source": [
+    "# Based on rasbt, Sebastian Raschhka's (fabuloustastic) notebooks and book:\n",
+    "\n",
+    "\"\n",
+    "Supplementary code for the Build a Large Language Model From Scratch book by Sebastian Raschka\n",
+    "\n",
+    "Code repository: https://github.com/rasbt/LLMs-from-scratch\n",
+    "\""
    ]
   },
   {
@@ -54,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "7c201adb-747e-437b-9a62-442802941e01",
    "metadata": {},
    "outputs": [],
@@ -64,26 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "cb9344eb-22a2-48d2-a72a-827bbc9b6a98",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook standalone-gemma3v2.ipynb to script\n",
-      "[NbConvertApp] Writing 26224 bytes to standalone-gemma3v2.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "!jupyter nbconvert --to script standalone-gemma3v2.ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "dd1b65a8-4301-444a-bd7c-a6f2bd1df9df",
    "metadata": {
     "colab": {
@@ -109,12 +139,7 @@
    "source": [
     "from importlib.metadata import version\n",
     "\n",
-    "# pkgs = [\n",
-    "#     \"huggingface_hub\",  # to download pretrained weights\n",
-    "#     \"tokenizers\",       # to implement the tokenizer\n",
-    "#     \"torch\",            # to implement the model\n",
-    "# ]\n",
-    "\n",
+    "# modified\n",
     "pkgs = [\n",
     "\"torch\",  # to implement the model\n",
     "\"numpy\",\n",
@@ -138,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "70a90338-624a-4706-aa55-6b4358070194",
    "metadata": {},
    "outputs": [],
@@ -159,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "82076c21-9331-4dcd-b017-42b046cf1a60",
    "metadata": {
     "id": "82076c21-9331-4dcd-b017-42b046cf1a60"
@@ -168,7 +193,6 @@
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "\n",
     "\n",
     "class FeedForward(nn.Module):\n",
     "    def __init__(self, cfg):\n",
@@ -186,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "id": "56715760-37e1-433e-89da-04864c139a9e",
    "metadata": {},
    "outputs": [],
@@ -215,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "id": "4b9a346f-5826-4083-9162-abd56afc03f0",
    "metadata": {
     "id": "4b9a346f-5826-4083-9162-abd56afc03f0"
@@ -267,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "id": "e8169ab5-f976-4222-a2e1-eb1cabf267cb",
    "metadata": {
     "id": "e8169ab5-f976-4222-a2e1-eb1cabf267cb"
@@ -352,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "id": "457cb2f8-50c1-4045-8a74-f181bfb5fea9",
    "metadata": {
     "id": "457cb2f8-50c1-4045-8a74-f181bfb5fea9"
@@ -418,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "id": "e88de3e3-9f07-42cc-816b-28dbd46e96c4",
    "metadata": {
     "id": "e88de3e3-9f07-42cc-816b-28dbd46e96c4"
@@ -539,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "id": "caa142fa-b375-4e78-b392-2072ced666f3",
    "metadata": {
     "id": "caa142fa-b375-4e78-b392-2072ced666f3"
@@ -586,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "id": "156253fe-aacd-4da2-8f13-705f05c4b11e",
    "metadata": {
     "id": "156253fe-aacd-4da2-8f13-705f05c4b11e"
@@ -599,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "eaf86265-4e9d-4024-9ed0-99076944e304",
    "metadata": {},
    "outputs": [
@@ -634,7 +658,7 @@
        ")"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "id": "adf0a6b7-b688-42c9-966e-c223d34db99f",
    "metadata": {},
    "outputs": [
@@ -666,7 +690,7 @@
        "       dtype=torch.bfloat16, grad_fn=<UnsafeViewBackward0>)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "id": "364e76ca-52f8-4fa5-af37-c4069f9694bc",
    "metadata": {
     "colab": {
@@ -708,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "id": "fd5efb03-5a07-46e8-8607-93ed47549d2b",
    "metadata": {
     "colab": {
@@ -758,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "id": "31f12baf-f79b-499f-85c0-51328a6a20f5",
    "metadata": {
     "id": "31f12baf-f79b-499f-85c0-51328a6a20f5"
@@ -788,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "id": "75166128-5899-4995-9b88-9672e135650e",
    "metadata": {
     "id": "75166128-5899-4995-9b88-9672e135650e"
@@ -932,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "id": "7cee5292-f756-41dd-9b8d-c9b5c25d23f8",
    "metadata": {},
    "outputs": [],
@@ -945,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "id": "699cb1b8-a67d-49fb-80a6-0dad9d81f392",
    "metadata": {
     "colab": {
@@ -968,22 +992,7 @@
     "id": "699cb1b8-a67d-49fb-80a6-0dad9d81f392",
     "outputId": "55b2f28c-142f-4698-9d23-d27456d3ed6d"
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bce72ffbd8d44c589ce187b268d919e4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/536M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import os\n",
@@ -1036,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "id": "b68ab489-48e5-471e-a814-56cda2d60f81",
    "metadata": {},
    "outputs": [],
@@ -1066,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "id": "7b6df8bc-7308-468e-93ce-2d5529ea7866",
    "metadata": {},
    "outputs": [],
@@ -1084,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "id": "1946b534-e3af-431a-a222-391a60bfa892",
    "metadata": {},
    "outputs": [
@@ -1094,7 +1103,7 @@
        "'<bos><start_of_turn>user\\nGive me a short introduction to large language models.<end_of_turn>\\n<start_of_turn>model\\n'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,16 +1228,18 @@
    "cell_type": "markdown",
    "id": "fb9093f6-5d56-4a63-864d-1677b0534ec3",
    "metadata": {},
-   "source": []
+   "source": [
+    "\"end of original code\""
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "a22a9a47-d6d2-4727-842a-adc29fcdb276",
    "metadata": {},
    "source": [
-    "# \n",
+    "# Mod: Training Gemma\n",
     "\n",
-    "Key Educational Points to Emphasize:\n",
+    "Points to Emphasize:\n",
     "\n",
     "Architecture Differences:\n",
     "\n",
@@ -2476,7 +2487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "id": "4a800a07-f69a-423a-ab8e-70133dc164b9",
    "metadata": {},
    "outputs": [
@@ -2486,22 +2497,18 @@
      "text": [
       "Testing different generation strategies:\n",
       "\n",
-      "Conservative (temp=0.5, top_k=10):\n",
-      "<bos>The future of artificial intelligence is a great question. Some people are skeptical about it, and some are even afraid to admit it. But it’s not a matter of opinion; it’s a matter of fact.\n",
-      "\n",
-      "Artificial intelligence has already changed the way people live,\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "Balanced (temp=0.8, top_k=50):\n",
-      "<bos>The future of artificial intelligence is a topic of critical interest, and many companies are beginning to explore the possibilities of such technology. This article examines some of the potential applications of artificial intelligence in the business world, including companies such as Walmart, Google, and Apple, and their applications\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "Creative (temp=1.2, top_k=100):\n",
-      "<bos>The future of artificial intelligence, with its potential to change everything, seems almost endless. At least at the research and product level, things like 3D scanners have been around for years, but it’s also certainly a technology that can lead to some fascinating insights.\n",
-      "\n",
-      "\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n"
+      "Conservative (temp=0.5, top_k=10):\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'tokenizer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 69\u001b[39m\n\u001b[32m     66\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m config \u001b[38;5;129;01min\u001b[39;00m generation_configs:\n\u001b[32m     67\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconfig[\u001b[33m'\u001b[39m\u001b[33mname\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m (temp=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconfig[\u001b[33m'\u001b[39m\u001b[33mtemperature\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, top_k=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconfig[\u001b[33m'\u001b[39m\u001b[33mtop_k\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m):\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     68\u001b[39m     output = generate_advanced(\n\u001b[32m---> \u001b[39m\u001b[32m69\u001b[39m         model, \u001b[43mtokenizer\u001b[49m, prompt, \n\u001b[32m     70\u001b[39m         temperature=config[\u001b[33m'\u001b[39m\u001b[33mtemperature\u001b[39m\u001b[33m'\u001b[39m], \n\u001b[32m     71\u001b[39m         top_k=config[\u001b[33m'\u001b[39m\u001b[33mtop_k\u001b[39m\u001b[33m'\u001b[39m],\n\u001b[32m     72\u001b[39m         max_new_tokens=\u001b[32m50\u001b[39m\n\u001b[32m     73\u001b[39m     )\n\u001b[32m     74\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     75\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m-\u001b[39m\u001b[33m\"\u001b[39m * \u001b[32m80\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'tokenizer' is not defined"
      ]
     }
    ],
@@ -2803,8 +2810,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "63fb5c8a-562f-49d7-8e57-c7f0d33537f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reload the complete model for continued training or inference\n",
+    "import torch\n",
+    "\n",
+    "if torch.cuda.is_available():\n",
+    "    device = torch.device(\"cuda\")\n",
+    "elif torch.backends.mps.is_available():\n",
+    "    device = torch.device(\"mps\")\n",
+    "else:\n",
+    "    device = torch.device(\"cpu\")\n",
+    "\n",
+    "# model.to(device);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "811d7785-587d-4914-a1b7-dc783044cc33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model loaded successfully\n",
+      "Training epochs completed: 3\n",
+      "Best validation loss: 2.8214\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reload the complete model for continued training or inference\n",
+    "import torch\n",
+    "\n",
+    "# Load the checkpoint\n",
+    "checkpoint = torch.load('gemma3_trained_complete.pth', map_location=device)\n",
+    "\n",
+    "# Recreate the model with the same configuration\n",
+    "model = Gemma3Model(checkpoint['config'])\n",
+    "\n",
+    "# Load the state dictionary\n",
+    "model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "\n",
+    "# Move to device\n",
+    "model = model.to(device)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "033926fd-a4b2-4018-bc81-2a66d8bf3d9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If you want to continue training, set to train mode\n",
+    "# model.train()\n",
+    "\n",
+    "# # Access training history if needed\n",
+    "# training_history = checkpoint['training_history']\n",
+    "# final_metrics = checkpoint['final_metrics']\n",
+    "\n",
+    "# # Print out some information\n",
+    "# print(\"Model loaded successfully\")\n",
+    "# print(f\"Training epochs completed: {final_metrics['total_epochs']}\")\n",
+    "# print(f\"Best validation loss: {final_metrics['best_val_loss']:.4f}\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "174b24fa-765c-4387-9580-eed21382fa07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Or for inference\n",
+    "model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "66d1bc9f-9f06-4a0a-a657-71b52e1ccc1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing different generation strategies:\n",
+      "\n",
+      "Conservative (temp=0.5, top_k=10):\n",
+      "<bos>The future of artificial intelligence (AI) is poised to revolutionize many aspects of our lives, and it's clear that this technology will have a profound impact on the world.  While the potential benefits are immense, the development and deployment of AI also raise significant ethical and societal\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "Balanced (temp=0.8, top_k=50):\n",
+      "<bos>The future of artificial intelligence (AI) is poised for profound and transformative changes across various sectors. While the potential benefits are undeniable, the rapid advancement of AI technologies presents significant challenges and ethical considerations that must be carefully addressed. This paper explores the multifaceted challenges and opportunities presented by AI\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "Creative (temp=1.2, top_k=100):\n",
+      "<bos>The future of artificial intelligence (AI) is rapidly evolving, and its impact on society is profound. With AI-driven innovations, we are striving to develop more autonomous and adaptable systems that can handle complex challenges and contribute to better human lives.\n",
+      "\n",
+      "AI's capabilities in areas\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test different generation settings\n",
+    "generation_configs = [\n",
+    "    {\"temperature\": 0.5, \"top_k\": 10, \"name\": \"Conservative\"},\n",
+    "    {\"temperature\": 0.8, \"top_k\": 50, \"name\": \"Balanced\"},\n",
+    "    {\"temperature\": 1.2, \"top_k\": 100, \"name\": \"Creative\"},\n",
+    "]\n",
+    "\n",
+    "prompt = \"The future of artificial intelligence\"\n",
+    "\n",
+    "print(\"Testing different generation strategies:\\n\")\n",
+    "for config in generation_configs:\n",
+    "    print(f\"{config['name']} (temp={config['temperature']}, top_k={config['top_k']}):\")\n",
+    "    output = generate_advanced(\n",
+    "        model, tokenizer, prompt, \n",
+    "        temperature=config['temperature'], \n",
+    "        top_k=config['top_k'],\n",
+    "        max_new_tokens=50\n",
+    "    )\n",
+    "    print(f\"{output}\\n\")\n",
+    "    print(\"-\" * 80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "169cd342-110a-459e-b200-da5a30d83fba",
    "metadata": {},
    "outputs": [],
    "source": []
