--- a/gemma_270_finetune/gemma_train_generate_ch03_v6.ipynb
+++ b/gemma_270_finetune/gemma_train_generate_ch03_v6.ipynb
@@ -17,7 +17,7 @@
    ],
    "source": [
     "# turn this into a .py file\n",
-    "!jupyter nbconvert --to script gemma_train_generate_ch03_v4.ipynb"
+    "!jupyter nbconvert --to script gemma_train_generate_ch03_v5.ipynb"
    ]
   },
   {
@@ -25,7 +25,9 @@
    "id": "512f3865-6a3e-4367-9112-75d6ea7a3244",
    "metadata": {},
    "source": [
-    "# Training Gemma"
+    "# Training Gemma\n",
+    "\n",
+    "### see: new .py file -> train_gemma.py"
    ]
   },
   {
@@ -33,7 +35,7 @@
    "id": "ca4b598a-465a-4c95-838f-233ca8b3d679",
    "metadata": {},
    "source": [
-    "## TODO\n",
+    "# TODO List\n",
     "\n",
     "### 1. \n",
     "- gutenberg txt fine tuning\n",
@@ -45,6 +47,9 @@
     "- base model trimming, pruning\n",
     "- classification head\n",
     "- embedding head\n",
+    "- larger gemma-type models\n",
+    "- CPU-only version\n",
+    "- quantizing model after training\n",
     "- dynamic-embeddings\n",
     "- IoT Data\n",
     "- Biological Signals & Behavior\n",
@@ -54,7 +59,13 @@
     "\n",
     "### 2. \n",
     "- full model training vs. lora-layer addition\n",
-    "- saving an reloading weights\n"
+    "- saving an reloading weights\n",
+    "\n",
+    "### 3. \n",
+    "- using the gemma 270m archetecture (or slight modification)\n",
+    "  1. adjust archetecture to compared across same synthetic data training\n",
+    "- making a public or crowd-sourced open MIT/APACHE2 weight set.\n",
+    "- STEM-Net Benchmarks: a range of synthetic training data types\n"
    ]
   },
   {
